Checking redirect - experiments

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             var service=getQueryVariable("service");
             if (pageId == false) {pageId = "15shNCte_Ur6AVG5gzUdtiI_D701D8YeGhv4c4nUoSpI";}
             if (service == false) {service = "gdrive";}
-            get_doc_new(pageId, service);
+            get_doc(pageId, service);
         </script>
     </body>
 </html>
