--- a/index.html
+++ b/index.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html>
     <script src="https://rawgit.com/showdownjs/showdown/master/dist/showdown.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <head>
         <meta charset="UTF-8"/>
-        <!-- Latest compiled and minified CSS -->
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-        <!-- <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cyborg/bootstrap.min.css" rel="stylesheet"> -->
-      <!--  <script type="text/javascript"> 
+        <script language="javascript">
             var cssName=getQueryVariable("css");
-            if (cssName == false) {cssName="darkly";}
-            var link = document.createElement( "link" );
-            link.href = "https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/"+cssName+"/bootstrap.min.css";
-            link.type = "text/css";
-            link.rel = "stylesheet";
-            link.media = "screen,print";
-            
-            document.getElementsByTagName( "head" )[0].appendChild( link );
-        </script>*-->
+            setCSS(cssName);
+        </script>
     </head>
     <body>
         <div id="demo" class="container"></div>
         <script language="javascript">
             var pageId=getQueryVariable("pageId");
             var service=getQueryVariable("service");
-            if (pageId == false) {pageId = "15shNCte_Ur6AVG5gzUdtiI_D701D8YeGhv4c4nUoSpI";}
-            if (service == false) {service = "gdrive";}
-            get_doc(pageId, service);
+            var cssName=getQueryVariable("css");
+            setCSS(cssName);
+            write_markdown(pageId, service);
         </script>
     </body>
 </html>
